# ever-quint-assignment

./: .gitignore  README.md  debug_init.py  logging_config.toml  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: app.py
backend/backend/: logger_setup.py  max_profit.py  multistep_agent.py  rag_search.py  utils.py
backend/documents/: about_everquint.txt  ds.txt  reviews.html
backend/pages/: 1_Max_Profit.py  2_Water_Tank.py  3_Document_Search.py  4_Reasoning_Agent.py
chroma_db/: chroma.sqlite3
chroma_db/439b5250-b82c-495e-a836-2c2560a7ef6f/: index_metadata.pickle
chroma_db/4dce6dcc-c941-41bc-b02f-9eac69ac756b/: index_metadata.pickle
chroma_db/a5f37ac7-401b-479a-a6cf-e04b95f88e1c/: index_metadata.pickle
chroma_db/d7b7902a-cc24-4802-88de-8a9d666247ab/: index_metadata.pickle
frontend/water_tank/: app.js  index.html  styles.css
run_logs/: agent_evaluation_log.json
tests/: evaluate_agent.py  ragas_evaluation.ipynb  ragas_results.csv  test_max_profit.py  test_multistep_agent.py  test_rag_search.py
