[tool.poetry]
name = "ai-engineer-assignment"
version = "0.1.0"
description = "Interview assignment: Water Tank, Max Profit, Multi-step reasoning, RAG - Streamlit multi-page"
authors = ["Mohamed Afrith <https://afrith-portfolio-sigma.vercel.app/>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pydantic = "^1.10.7"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
